@@ -1,3 +1,12 @@
+2003-03-31  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* win/Makefile.in: Define TCL_DBGX when compiling
+	tclWinPipe.c.
+	* win/tclWinPipe.c (TclpCreateProcess): Define
+	PREFIX_IDENT as "rh" and define DEBUG_IDENT based
+	on TCL_DBGX so that the Tcl pipe dll for 16bit
+	Windows applications can be used.
+
 2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* win/configure: Regen.
